--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 	<head>
 		<title>SearchVidz</title>
 		<link rel="stylesheet" href="css/style.css">
-		
+		<link rel="stylesheet" href="css/jquery.fancybox.css">
+
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="js/script.js"></script>
+		<script src="js/jquery.fancybox.pack.js"></script>
+		<script>
+	$(document).ready(function(){
+		$(".fancybox").fancybox();
+	});
+		</script>
+
 	</head>
 	<body>
 		<div id="container">
@@ -20,7 +28,7 @@
 						<input type="submit" name="search-btn" id="search-btn" value="">
 					</div>
 				</form>
-				
+
 				<ul id="results"></ul>
 				<div id="buttons"></div>
 			</section>
