--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="js/script.js"></script>
 		<script src="js/jquery.fancybox.pack.js"></script>
-		<script src="js/jquery.fancybox.button.js"></script>
+<!-- 		<script src="js/jquery.fancybox.button.js"></script> -->
 		<script>
 	$(document).ready(function(){
 		$(".fancybox").fancybox();
